# pretext-cli

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .ptxconfig  .python-version  CHANGELOG.md  CHANGELOG.md.tmp  LICENSE  Pipfile  README.md  VERSIONING.md  build.py  changelog.md  document_help.py  pelican-testing.py  publisher.ptx  pyproject.toml  roadmap.md  setup.cfg  setup.py  update_core.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md
.github/workflows/: codespace-template.yml  deploy-nightly-dev.yml  deploy-nightly-old.yml  deploy-nightly.yml  deploy-stable.yml  major.yml  minor.yml  nightly.yml  patch.yml  python-app.yml  test-on-pr.yml  test-on-push.yml  tests.yml  update_core_commit.yml
docs/: about.html  api.md  asset-generation.md  contributors.html  core_development.md  index.html  installation.html  landing_page.md  pretext-cli-documentation.html  quickref-cli.tex  usage.html
docs-project/source/: about.ptx  usage.ptx
docs/knowl/: aside-1.html  li-1.html  li-2.html  li-3.html  li-4.html  li-5.html  li-6.html  li-7.html  li-8.html  li-9.html  p-1.html  p-10.html  p-11.html  p-12.html  p-13.html  p-14.html  p-15.html  p-16.html  p-17.html  p-18.html  p-19.html  p-2.html  p-20.html  p-21.html  p-3.html  p-4.html  p-5.html  p-6.html  p-7.html  p-8.html  p-9.html
foobar-in/pages/: home.md
foobar-in/updates/: 20240617.md
new-pretext-project1/logs/: .fuse_hidden0006e26600000258  .fuse_hidden0006e27000000230
pelican-ptx/templates/: article.html  index.html
pelican/ptx-theme/templates/: article-block.html  author.html  base.html  category.html  index.html  page.html  tag.html
pelican/sample-source/: description.html  site.ptx
pelican/sample-source/pages/: home.md
pelican/sample-source/updates/: 20240617.md
pretext/: __init__.py  build.py  cli.py  codechat.py  constants.py  core.py  document.py  generate.py  logger.py  project.py  project_refactor.py  server.py  types.py  utils.py
pretext/config/: xml_overlay.py
pretext/core/: __init__.py  braille_format.py  resources.py
pretext/plastex/: Alignment.jinja2s  Arrays.jinja2s  Bibliography.jinja2s  Boxes.jinja2s  Breaking.jinja2s  Crossref.jinja2s  Floats.jinja2s  FontSelection.jinja2s  Footnotes.jinja2s  Index.jinja2s  Lists.jinja2s  Pictures.jinja2s  Quotations.jinja2s  Sectioning.jinja2s  Sentences.jinja2s  Space.jinja2s  Tabbing.jinja2s  Thms.jinja2s  Verbatim.jinja2s  __init__.py  babel.jinja2s  graphicx.jinja2s  hyperref.jinja2s  longtable.jinja2s  math.jinja2s  misc.jinja2s  natbib.jinja2s  p.jinja2s  subfig.jinja2s  tikzcd.jinja2  tikzpicture.jinja2  url.jinja2s  wrapfig.jinja2s
pretext/project/: __init__.py  generate.py  oldinit.py  refactor.py  xml.py
pretext/resources/: __init__.py  resource_hash_table.json
pretext/static/: CORE_COMMIT  VERSION  __init__.py  article.ptx  book.ptx  help.txt  publisher.ptx
pretext/templates/: __init__.py
pretext/utils/: __init__.py  server.py  xml.py
pretextbook/: setup.py
schema/: README.md  project-ptx.rnc  project-ptx.rng
scripts/: build_package.py  build_release.py  bundle_resources.py  copy_cdn_files.py  fetch_core.py  fetch_core_commit.py  pr_desc.py  prep_nightly.py  release_alpha.py  release_nightly.py  release_notes.py  release_stable.py  remove_path.py  symlink_core.py  tag_counter.py  unlink_core.py  update_changelog.py  update_core.py  utils.py  zip_templates.py
source/: installation.ptx  main.ptx  usage.ptx
templates/: .devcontainer.json  .gitignore  add-latex.sh  add-sage.sh  codechat_config.yaml  deploy.yml  devcontainer.json  installLatex.sh  installPandoc.sh  installPretext.sh  installSage.sh  postCreateCommand.sh  pretext-cli.yml  pretext-deploy.yml  project.ptx  publication.ptx  standalone-project.ptx  standalone-publication.ptx
templates/article/: .gitignore  README.md  project.ptx
templates/article/publication/: publication.ptx
templates/article/source/: frontmatter.ptx  introduction.ptx  main-subset.ptx  main.ptx  section-1.ptx  section-2.ptx
templates/book/: .gitignore  README.md  project.ptx
templates/book/publication/: publication.ptx
templates/book/source/: backmatter.ptx  bookinfo.ptx  ch-chapter-title.ptx  ch_empty.ptx  ch_features.ptx  ch_first-chapter.ptx  ch_generate.ptx  ch_pretext-features.ptx  chapter-1.ptx  chapter-2.ptx  docinfo.ptx  electronics.tex  ex_firstch.ptx  fig_asymptote.ptx  fig_sage2d.ptx  fig_sage3d.ptx  fig_tikz.ptx  figure-asymptote.ptx  figure-sage2d.ptx  figure-sage3d.ptx  figure-tikz.ptx  frontmatter.ptx  main-subset.ptx  main.ptx  meta_backmatter.ptx  sec-section-name.ptx  sec_first-examples.ptx  sec_firstch-examples.ptx  sec_firstch-intro.ptx
templates/course/: README.md  project.ptx
templates/course/publication/: publication-slides-annotated.ptx  publication-slides.ptx  publication-syllabus.ptx  publication.ptx  publication_scorm_syllabus.ptx  publication_standalone.ptx
templates/course/source/: activities.ptx  course-notes.ptx  docinfo.ptx  frontmatter.ptx  main-no-syllabus.ptx  main.ptx  notes.ptx  syllabus-keller.ptx  syllabus.ptx
templates/demo/: README.md
templates/demo/publication/: publication.ptx
templates/demo/source/: backmatter.ptx  ch-empty.ptx  ch-features.ptx  ch-first with spaces.ptx  ch-first.ptx  ch-generate.ptx  ch_features.ptx  ch_first.ptx  ch_generate.ptx  docinfo.ptx  ex-first.ptx  ex_first.ptx  fig-asymptote.ptx  fig-sage2d.ptx  fig-sage3d.ptx  fig-tikz.ptx  fig_sage3d.ptx  frontmatter.ptx  main.ptx  meta_frontmatter.ptx  sec-features.ptx  sec-first-examples.ptx  sec-first-intro.ptx  ww.ptx
templates/hello/: README.md  project.ptx
templates/slideshow/: project.ptx
templates/slideshow/publication/: publication.ptx
templates/slideshow/source/: main.ptx
tests/: common.py  schema-error.ptx  test_cli.py  test_generate.py  test_project.py  test_sample_article.py  test_templates.py  test_utils.py  test_webwork.py  test_xml_overlay.py  xml-error-second-section.ptx  xml-error-xinclude.ptx  xml-error.ptx
tests/ptx/: asymptote.ptx
(+86 files in other folders)
