# ********************************
# |docname| - Poetry configuration
# ********************************
#
# Poetry
# ======
# See https://python-poetry.org/docs/dependency-specification/ to get an understanding of
# how poetry specifies dependencies.
#
# Project metadata
# ----------------
[tool.poetry]
name = "pretext"
version = "1.5.4"
description = "A package to author, build, and deploy PreTeXt projects."
readme = "README.md"
homepage = "https://pretextbook.org"
repository = "https://github.com/PreTeXtBook/pretext-cli"
authors = ["Oscar Levin <oscar.levin@unco.edu>", "Steven Clontz <steven.clontz@gmail.com>",]
license = "GPL-3.0-or-later"
include = [
    "pretext/core/pretext.py",
    "pretext/core/resources.zip",
    "pretext/templates/resources/*",
]

# Dependencies
# ------------
[tool.poetry.dependencies]
python = "^3.8.5"
lxml = "^4.8"
requests = "^2"
watchdog = "^2"
GitPython = "^3"
click = "^8"
pdfCropMargins = "~1.0.9"
PyPDF2 = "~2.5"
click-log = "^0.4"
ghp-import = "^2"
single-version = "^1"
playwright = "^1"
qrcode = "^7"

# Development dependencies
# ------------------------
[tool.poetry.group.dev.dependencies]
lxml-stubs = "^0.4.0"
mypy = "^1"
pytest = "^7.0.0"
pytest-console-scripts = "^1.3.1"
pytest-cov = "^4"
pytest-mock = "^3.8.2"
black = "^22.12.0"
codechat-server = "^0.2.9"
flake8 = "^6.0.0"

# Misc
# ----
[tool.poetry.scripts]
pretext = 'pretext.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Pytest configuration
# ====================
[tool.pytest.ini_options]
script_launch_mode = "subprocess"

# mypy configuration
# ==================
# To run, execute ``mypy`` from the directory containing this file.
#
# This section `must <https://mypy.readthedocs.io/en/stable/config_file.html#config-file-format>`_ be present.
[tool.mypy]
# See `files <https://mypy.readthedocs.io/en/stable/config_file.html#confval-files>`_.
files = "pretext"
exclude = "^pretext/core/.*"

# Ignores for libraries with no type hints
# ----------------------------------------
[[tool.mypy.overrides]]
module = [
    "click_log",
    "single_version",
    "ghp_import",
    # We're installing ``lxml-stubs``, but it doesn't have stubs for this yet.
    "lxml.ElementInclude",
]
ignore_missing_imports = true
