[metadata]
name = pretextbook
version = attr: pretext.VERSION
author = PreTeXtBook.org
author_email = steven.clontz+PreTeXt@gmail.com
url = https://github.com/PreTeXtBook/pretext-cli
description = A package for authoring and building PreTeXt documents.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
python_requires = >=3.8.5
include_package_data = True
packages = find:
install_requires =
    lxml==4.*
    requests==2.*
    watchdog==2.*
    GitPython==3.*
    click==8.*
    pdfCropMargins>=1.0.6,<2
    click-logging==1.*

[options.package_data]
checkit = static/*, static/*/*, static/*/*/*

[options.extras_require]
dev = 
    setuptools
    wheel
    twine
    secretstorage
